--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
-DEBUG=False
+# Server Configuration
+DEBUG=True
+HOST=0.0.0.0
+PORT=8000
 ALLOWED_HOSTS=localhost,127.0.0.1
 CORS_ALLOWED_ORIGINS=http://localhost:8000,http://127.0.0.1:8000
+
+# Storage Configuration
 STORAGE_PATH=/app/storage
-MAX_WORKERS=2  # Anzahl paralleler Bildverarbeitungsprozesse
-AVIF_EFFORT=2  # AVIF Kompressionseinstellung (2 = guter Trade-off)
+MAX_FILE_SIZE=10
