--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ fastapi==0.104.1
 uvicorn==0.24.0
 python-multipart==0.0.6
 pydantic==2.4.2
-pydantic-settings==0.1.0
+pydantic-settings
 pyvips==2.2.1
 python-dotenv==1.0.0
 aiofiles==23.2.1
