--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,13 +4,13 @@ server {
 
     client_max_body_size 10M;
 
-    # API endpoints
+    # API endpoints - Hier lag der Fehler, wir strippen das /api/ prefix nicht
     location /api/ {
-        proxy_pass http://api:8000/;
-        proxy_set_header Host \$host;
-        proxy_set_header X-Real-IP \$remote_addr;
-        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto \$scheme;
+        proxy_pass http://api:8000/api/;  # Geändert
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Cached images
@@ -18,15 +18,15 @@ server {
         alias /var/www/storage/;
         expires 7d;
         add_header Cache-Control "public, no-transform";
-        try_files \$uri @backend;
+        try_files $uri @backend;
     }
 
     # Fallback to API for image processing
     location @backend {
         proxy_pass http://api:8000;
-        proxy_set_header Host \$host;
-        proxy_set_header X-Real-IP \$remote_addr;
-        proxy_set_header X-Forwarded-For \$proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto \$scheme;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
