--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,9 +4,22 @@ server {
 
     client_max_body_size 10M;
 
-    # API endpoints - Hier lag der Fehler, wir strippen das /api/ prefix nicht
+    # CORS Headers for all locations
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
+
+    # API endpoints
     location /api/ {
-        proxy_pass http://api:8000/api/;  # Geändert
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+
+        proxy_pass http://api:8000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -21,7 +34,7 @@ server {
         try_files $uri @backend;
     }
 
-    # Fallback to API for image processing
+    # Fallback to API
     location @backend {
         proxy_pass http://api:8000;
         proxy_set_header Host $host;
