--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -4,12 +4,6 @@ server {
 
     client_max_body_size 10M;
 
-    # CORS Headers for all locations
-    add_header 'Access-Control-Allow-Origin' '*' always;
-    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-    add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type' always;
-
-    # API endpoints
     location /api/ {
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*';
@@ -19,6 +13,7 @@ server {
             return 204;
         }
 
+        add_header 'Access-Control-Allow-Origin' '*';
         proxy_pass http://api:8000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -26,7 +21,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Cached images
     location /storage/ {
         alias /var/www/storage/;
         expires 7d;
@@ -34,7 +28,6 @@ server {
         try_files $uri @backend;
     }
 
-    # Fallback to API
     location @backend {
         proxy_pass http://api:8000;
         proxy_set_header Host $host;
