--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,9 +1,55 @@
+# Server für HTTP (Port 80) - Hauptsächlich für Let's Encrypt
 server {
     listen 80;
     server_name cdn.siegfried.app;
+    root /var/www/certbot;
 
+    # Let's Encrypt Validierung
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        allow all;
         try_files $uri =404;
+    }
+
+    # Alles andere auf HTTPS umleiten
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# Server für HTTPS (Port 443)
+server {
+    listen 443 ssl;
+    server_name cdn.siegfried.app;
+
+    client_max_body_size 10M;
+
+    # SSL Konfiguration
+    # ssl_certificate /etc/letsencrypt/live/cdn.siegfried.app/fullchain.pem;
+    # ssl_certificate_key /etc/letsencrypt/live/cdn.siegfried.app/privkey.pem;
+    # ssl_protocols TLSv1.2 TLSv1.3;
+    # ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # Ihre bestehenden Locations
+    location /api/ {
+        proxy_pass http://api:8000/api/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location /storage/ {
+        alias /var/www/storage/;
+        expires 7d;
+        add_header Cache-Control "public, no-transform";
+        try_files $uri @backend;
+    }
+
+    location @backend {
+        proxy_pass http://api:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
