--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -23,11 +23,11 @@ server {
 
     client_max_body_size 10M;
 
-    # SSL Konfiguration
-    # ssl_certificate /etc/letsencrypt/live/cdn.siegfried.app/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/cdn.siegfried.app/privkey.pem;
-    # ssl_protocols TLSv1.2 TLSv1.3;
-    # ssl_ciphers HIGH:!aNULL:!MD5;
+    #SSL Konfiguration
+    ssl_certificate /etc/letsencrypt/live/cdn.siegfried.app/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/cdn.siegfried.app/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
     # Ihre bestehenden Locations
     location /api/ {
