--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,35 +1,67 @@
-user  nginx;
-worker_processes  auto;
+# nginx.conf
+user nginx;
+worker_processes auto;
 
-error_log  /var/log/nginx/error.log notice;
-pid        /var/run/nginx.pid;
+error_log /var/log/nginx/error.log notice;
+pid /var/run/nginx.pid;
 
 events {
-    worker_connections  2048;
+    worker_connections 2048;
+    multi_accept on;
+    use epoll;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    log_format  main  '\$remote_addr - \$remote_user [\$time_local] "\$request" '
-                      '\$status \$body_bytes_sent "\$http_referer" '
-                      '"\$http_user_agent" "\$http_x_forwarded_for"';
+    # Optimierte Logging-Konfiguration
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    access_log /var/log/nginx/access.log main buffer=16k;
 
-    access_log  /var/log/nginx/access.log  main;
+    # Grundlegende Performance-Optimierungen
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    keepalive_requests 100;
+    reset_timedout_connection on;
+    client_body_timeout 12;
+    client_header_timeout 12;
 
-    sendfile        on;
-    tcp_nopush      on;
-    tcp_nodelay     on;
+    # Datei-Handle Cache
+    open_file_cache max=10000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
 
-    keepalive_timeout  65;
+    # Buffer-Optimierungen
+    client_body_buffer_size 16k;
+    client_header_buffer_size 1k;
+    client_max_body_size 10M;
+    large_client_header_buffers 4 8k;
 
-    # GZIP configuration
+    # GZIP Konfiguration
     gzip on;
     gzip_vary on;
     gzip_proxied any;
     gzip_comp_level 6;
-    gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types
+        image/svg+xml
+        image/x-icon
+        text/plain
+        text/css
+        text/js
+        text/xml
+        text/javascript
+        application/javascript
+        application/json
+        application/xml
+        application/rss+xml;
 
     include /etc/nginx/conf.d/*.conf;
 }
