--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -14,7 +14,8 @@ server {
 }
 
 server {
-    listen 443 ssl http2;  # HTTP/2 Unterstützung
+    listen 443 ssl;
+    http2 on;  # Neue HTTP/2 Syntax
     server_name cdn.siegfried.app;
     
     client_max_body_size 10M;
@@ -45,8 +46,6 @@ server {
         location ~* \.(jpg|jpeg|png|gif|ico|webp|avif)$ {
             expires 30d;
             add_header Cache-Control "public, no-transform";
-            try_files $uri @backend;
-
             # WebP und AVIF Content-Negotiation
             set $webp_ext "";
             set $avif_ext "";
