--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ opencv-python-headless==4.8.0.76
 Pillow==10.0.0
 numpy==1.24.3
 aiohttp==3.8.6
-prometheus-fastapi-instrumentator
-aioredis==2.0.1
-aio_pika==8.0.0
+prometheus-client>=0.19.0
+prometheus-fastapi-instrumentator>=6.1.0
+aio-pika>=9.3.1
+redis>=5.0.1
